# end_to_end_project

./: .gitignore  README.md  main.py  pyproject.toml  template.py
research/: dataingestion.ipynb
src/data_science_project/utils/: common.py
