[project]
name = "end-to-end-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "matplotlib>=3.10.5",
    "notebook>=7.4.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "python-box>=7.3.2",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.1",
]
